Fix styling and prevent zoom on mobile

--- a/packages/front/src/App.css
+++ b/packages/front/src/App.css
@@ -203,8 +203,8 @@ audio {
   the 50px is roughly the size of the top bar and
   the 40px is just a safety margin to ensure all the
   content gets displayed */
-  height: calc(100vh); /* The 50px probably needs to be somewhere else as it screws up the full screen popup*/
-  padding-bottom: 40px;
+  height: calc(100vh);
+  padding-bottom: 100px;
 }
 
 .followed {
@@ -257,6 +257,10 @@ input[type='range']::-webkit-slider-runnable-track {
 .react-joyride__tooltip button:disabled {
   background-color: transparent !important;
   color: #333333 !important;
+}
+
+.no-scroll-bar::-webkit-scrollbar {
+  display: none;
 }
 
 @media (max-width: 590px) {
