--- a/packages/front/src/PageContainer.css
+++ b/packages/front/src/PageContainer.css
@@ -6,7 +6,7 @@
 }
 
 .page-container::-webkit-scrollbar {
-  width: 0;
+  display: none;
 }
 
 @media (max-width: 590px) {
