--- a/packages/front/src/Tracks.css
+++ b/packages/front/src/Tracks.css
@@ -205,6 +205,10 @@
     margin: 6px;
   }
 
+  .follow-ignore-cart-cell {
+    max-width: 90px;
+  }
+
   .track-play-button {
     display: none;
   }
